--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -137,7 +137,7 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0;
+	margin: 50px 0px 0px 0px;
 }
 
 nav{
@@ -181,7 +181,7 @@ nav li {
 
 /* Bloc édition */
 
-#admin-logged{
+#edition-section{
 	width: 100%;
 	background-color: black;
 	display: flex;
@@ -191,7 +191,7 @@ nav li {
 	height: 50px;
 }
 
-#logo-edition{
+#edition-content{
 	display: flex;
 	font-size: 16px;
 	color: #fff;
@@ -224,6 +224,8 @@ a:hover {
 	border: none;
 	padding-bottom: 30px;
 	font-size: 14px;
+	display: none;
+	align-items: center;
 }
 .btn-style i{
 	padding-right: 10px;
@@ -235,6 +237,7 @@ a:hover {
 #introduction {
 	display: flex;
 	align-items: center;
+	margin:  10vh 0vh;
 }
 #introduction figure {
 	flex: 1;
@@ -261,6 +264,11 @@ a:hover {
 }
 
 /* Buttons Filters De Catégories*/
+
+#filters {
+  display: flex;
+}
+
 
 .container-btn {
 	display: flex;
@@ -294,6 +302,7 @@ a:hover {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	 margin-top: 50px; /* espacement au dessus de gallery */
 }
 
 .gallery img {
