--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -106,7 +106,7 @@ section {
 }
 body {
 	line-height: 1;
-	background-color: #FFFEF8;
+	background-color: #fffef8;
 }
 ol,
 ul {
@@ -140,7 +140,7 @@ header {
 	margin: 50px 0px 0px 0px;
 }
 
-nav{
+nav {
 	margin-bottom: 5em;
 }
 section {
@@ -181,7 +181,7 @@ nav li {
 
 /* Bloc édition */
 
-#edition-section{
+#edition-section {
 	width: 100%;
 	background-color: black;
 	display: flex;
@@ -191,13 +191,12 @@ nav li {
 	height: 50px;
 }
 
-#edition-content{
+#edition-content {
 	display: flex;
 	font-size: 16px;
 	color: #fff;
 	gap: 10px;
 }
-
 
 /* Effects Liens Redirectionnels */
 
@@ -212,32 +211,29 @@ a:hover {
 
 /* Btn modifier  */
 
-.flex-modify{
+.flex-modify {
 	display: flex;
 	justify-content: center;
 	gap: 20px;
-	
 }
 
-.btn-style{
+.btn-style {
 	background: none;
 	border: none;
 	padding-bottom: 30px;
 	font-size: 14px;
 	display: none;
 	align-items: center;
+	cursor: pointer;
 }
-.btn-style i{
+.btn-style i {
 	padding-right: 10px;
 }
-
-
-
 
 #introduction {
 	display: flex;
 	align-items: center;
-	margin:  10vh 0vh;
+	margin: 10vh 0vh;
 }
 #introduction figure {
 	flex: 1;
@@ -266,9 +262,8 @@ a:hover {
 /* Buttons Filters De Catégories*/
 
 #filters {
-  display: flex;
+	display: flex;
 }
-
 
 .container-btn {
 	display: flex;
@@ -284,7 +279,7 @@ a:hover {
 	padding: 10px 16px;
 	border-radius: 60px;
 	color: #1d6154;
-	background-color: #FFFEF8;
+	background-color: #fffef8;
 	border-color: #1d6154;
 	min-width: 100px;
 	cursor: pointer;
@@ -294,15 +289,13 @@ a:hover {
 	background-color: #1d6154;
 }
 
-
-
 .gallery {
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
-	 margin-top: 50px; /* espacement au dessus de gallery */
+	margin-top: 50px; /* espacement au dessus de gallery */
 }
 
 .gallery img {
@@ -351,10 +344,10 @@ input[type='submit'] {
 }
 
 .page-login {
-  min-height: 70vh; 
+	min-height: 70vh;
 }
 
-.password-flex{
+.password-flex {
 	display: flex;
 	justify-content: center;
 	text-decoration: underline;
@@ -366,10 +359,8 @@ footer nav ul {
 	margin: 2em;
 }
 
-
-
-.error-message{
-	color: #B1663C;
+.error-message {
+	color: #b1663c;
 	text-align: center;
 	margin-top: 20px;
 	font-size: large;
@@ -387,4 +378,97 @@ footer nav ul {
 	width: 180px;
 	text-align: center;
 	border-radius: 60px;
+	cursor: pointer;
+}
+
+/* ---------- MODAL ---------- */
+
+.hidden {
+	display: none !important;
+}
+
+.modal-overlay {
+	position: fixed;
+	inset: 0;
+	background-color: rgba(0, 0, 0, 0.6);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
+}
+
+.modal {
+	background-color: white;
+	width: 630px;
+	padding: 40px;
+	border-radius: 10px;
+	text-align: center;
+}
+
+/* Bouton fermer */
+.modal-container-close {
+	display: flex;
+	justify-content: flex-end;
+}
+.modal-close {
+	background: none;
+	border: none;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+/* Titre */
+.modal-title {
+	font-size: 26px;
+	font-weight: 400;
+	margin-bottom: 30px;
+}
+
+/* Galerie */
+.modal-gallery {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 15px;
+	margin-bottom: 70px;
+}
+
+/* Image miniature */
+.modal-gallery figure {
+	position: relative;
+}
+
+.modal-gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+/* icône poubelle */
+.modal-gallery .delete-icon {
+	position: absolute;
+	top: 6px;
+	right: 6px;
+	background-color: black;
+	color: white;
+	border-radius: 3px;
+	padding: 4px;
+	font-size: 10px;
+	cursor: pointer;
+}
+
+/* ligne séparatrice */
+.modal-separator {
+	border-top: 1px solid #b3b3b3;
+	margin: 30px 0;
+}
+
+.btn-add-photo {
+	font-family: 'Syne';
+	background-color: #1d6154;
+	color: white;
+	border: none;
+	padding: 10px 50px;
+	border-radius: 60px;
+	cursor: pointer;
+	font-size: 14px;
 }
